# FigurativeLanguageUnderstanding

./: .gitignore  README.md  Tests_one_sentence.ipynb  compile_DREAM_dataset.ipynb  data_generation.ipynb  dataset_generation.ipynb  dream.ipynb  dream.py  dream_elaborations.csv  dream_notebook.ipynb  flute-dream-training.ipynb  flute-dream.ipynb  flute.ipynb  flute_dream.py  modes.pkl  paired_statistics.ipynb  pyproject.toml  rico.ipynb  synthetic_data.tsv  synthetic_data_fewshot.ipynb  synthetic_data_stages.ipynb  t5_with_synthetic.ipynb  test.ipynb
new_sentences/: sarcasm.jsonl
