[tool.poetry]
name = "figurativelanguageunderstanding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.35.2"}
datasets = "^2.15.0"
pandas = "^2.1.3"
evaluate = "^0.4.1"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
rouge-score = "^0.1.2"
accelerate = "^0.25.0"
sentencepiece = "^0.1.99"
jsonlines = "^4.0.0"
optimum = "^1.16.1"
auto-gptq = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
